# VideoFaceDetector

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
.github/workflows/: .github.yml
prototypes/: CMakeLists.txt
prototypes/old/: CMakeLists.txt  Object.cpp  Object.h  OpenCVReader.cpp  OpenCVReader.h  PullObjects.cpp  PullObjects.h  VideoBuffer.cpp  VideoBuffer.h  VideoReader.h  main.cpp
src/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  CMakeLists.txt  DetectFaceHandler.cpp  DetectFaceHandler.h  Detector.cpp  Detector.h  JoinThreads.cpp  JoinThreads.h  Object.cpp  Object.h  OpenCVReader.cpp  OpenCVReader.h  ThreadPool.cpp  ThreadPool.h  ThreadsafeQueue.h  VideoBuffer.cpp  VideoBuffer.h  VideoFaceDetector.cpp  VideoFrame.h  VideoHandler.h  VideoReader.h  main.cpp
